--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@
 }
 .btn-gallery:hover,
 .btn-gallery:focus {
-  background-color: #2196f3;
+  background-color: var(--bg-color);
   color: var(--secondary-color);
 }
 /* =====end-portfolio===== */
@@ -383,6 +383,7 @@
   transform: translate(-50%, -50%) scaleY(0.1);
 }
 .modal {
+  padding: 40px;
   position: absolute;
   width: 528px;
   height: 581px;
@@ -411,4 +412,61 @@
   justify-content: center;
   align-items: center;
 }
-/* =====end-backdrop===== */
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 12px;
+}
+.modal-form-field {
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.01em;
+  color: var(--text-color);
+}
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+  margin-top: 4px;
+}
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-input:focus {
+  outline: none;
+  border-color: var(--bg-color);
+}
+.modal-form-input:focus + .field-icon {
+  fill: var(--bg-color);
+}
+.field-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  display: block;
+  width: 18px;
+  height: 18px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-policy-text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+/* =====end-backdrop===== */ ;
